# zib

./: .dockerignore  .env.example  .env.production.example  .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Inoreader Feeds 20250814.xml  README-Docker.md  README.md  actual_state.md  debug-frontend.js  docker-compose.local.yml  docker-compose.yml  eslint.config.js  package-lock.json  package.json  svelte.config.js
backend/: .env.example  .env.production.example  Dockerfile  conftest.py  create_all_tables.py  init_db.py  manage_migrations.py  migrate_to_utc.py  patch_db.py  pyproject.toml  run_migrations.py  start.sh  test_real_opml_import.py
backend/app/: cli.py  main.py
backend/app/core/: auth.py  config.py  database.py  exceptions.py  logging.py  migrations.py
backend/app/models/: __init__.py  article.py  base.py  filter.py
backend/app/routes/: __init__.py  article.py  categories.py  feeds.py  (+5 more)
backend/migrations/: 001_initial_schema.py  002_opml_import_schema.py  003_article_system_schema.py  004_filter_system.py  005_increase_filter_value_length.py  006_add_user_article_display_preferences.py  007_add_auto_refresh_settings.py  008_add_show_timestamps_setting.py  009_add_preferred_view_mode.py  010_add_article_image_url.py  011_add_feed_health_tracking.py  012_add_mark_read_scroll_settings.py  013_add_font_scale_setting.py  014_smart_refresh_system.py  README.md
backend/tests/: test_feed_health_models.py  test_feed_health_service.py  test_priority_calculator.py  test_smart_refresh_migration.py  test_smart_refresh_service.py
(+243 files in other folders)
